# hippomem

./: .env.example  .gitignore  AGENT_README.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/codeflows/: client.md  consolidate.md  decode.md  encode.md  infra.md  models.md  retrieve.md  server.md  service_lifecycle.md  ui.md
docs/components/: consolidation.md  memory-types.md  studio-ui.md
docs/contributing/: architecture.md
docs/guides/: configuration.md  quickstart.md
examples/: chat_server.py  demo.py
hippomem/: __init__.py  cli.py  client.py  config.py  explorer.py  inspector.py  service.py  sessions.py
hippomem/consolidator/: __init__.py  background.py  llm_ops.py  service.py
hippomem/db/: migrations.py  session.py
hippomem/decoder/: __init__.py  context_builder.py  llm_ops.py  local_scan.py  long_term.py  schemas.py  scoring.py  synthesizer.py
hippomem/encoder/: __init__.py  schemas.py  updater.py
hippomem/infra/: __init__.py  bm25.py  call_collector.py  embeddings.py  llm.py
hippomem/infra/graph/: __init__.py  edges.py  queries.py
hippomem/infra/vector/: edges.py  (+3 more)
hippomem/memory/: __init__.py
hippomem/models/: __init__.py  conversation_turn.py  conversation_turn_engram.py  engram.py  engram_link.py  llm_interaction.py  self_trait.py  trace.py  turn_status.py  working_state.py
hippomem/prompts/: __init__.py  consolidator.yaml  decoder.yaml  encoder.yaml  entity.yaml  self_encoder.yaml
hippomem/retrieve/: __init__.py  schemas.py  service.py
hippomem/schemas/: working_state.py
hippomem/server/: __init__.py  app.py  config_store.py
scripts/: build_studio.sh
studio/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
studio/src/: App.tsx  index.css
tests/: conftest.py
tests/e2e/: test_recall_encode_cycle.py
tests/integration/: test_consolidation.py  test_entity_memory.py  test_memory_updater.py  test_self_memory.py  test_synthesizer.py
tests/unit/: test_config.py  test_context_builder.py  test_ets.py  test_faiss_service.py  test_graph_edges.py  test_graph_queries.py  test_local_scan.py  test_long_term_retrieval.py  test_retrieve_service.py  test_scoring.py  test_self_service.py  test_vector_embedding.py  test_working_state.py
(+69 files in other folders)
